--- a/style.css
+++ b/style.css
@@ -12,3 +12,14 @@
     background: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(39,9,121,1) 35%, rgba(0,212,255,1) 100%);
     background-repeat: no-repeat;
 }
+
+.floating-menu {
+    font-family: sans-serif;
+    z-index: 10;
+    display: block;
+    position: fixed;
+}
+
+.w-40 {
+    width: 14rem;
+}
