--- a/style.css
+++ b/style.css
@@ -13,6 +13,11 @@
     background-repeat: no-repeat;
 }
 
+.--blurred-border {
+    box-shadow: inset 0 0 10px white;
+    pointer-events: none;
+}
+
 .floating-menu {
     width: 10rem;
     font-family: sans-serif;
